--- a/extra-tests/classes/RollupQueryBuilderTests.cls
+++ b/extra-tests/classes/RollupQueryBuilderTests.cls
@@ -6,9 +6,10 @@ private class RollupQueryBuilderTests {
 
     // validate the query
     Set<String> objIds = new Set<String>();
-    Database.query(queryString);
+    List<SObject> records = Database.query(queryString);
 
     System.assertEquals(true, queryString.contains('AND IsDeleted = false ALL ROWS'));
+    System.assertEquals(Task.SObjectType, records.getSObjectType());
   }
 
   @IsTest
@@ -16,9 +17,10 @@ private class RollupQueryBuilderTests {
     String queryString = RollupQueryBuilder.Current.getQuery(Event.SObjectType, new List<String>{ 'Id' }, 'WhatId', '=');
 
     Set<String> objIds = new Set<String>();
-    Database.query(queryString);
+    List<SObject> records = Database.query(queryString);
 
     System.assertEquals(true, queryString.contains('AND IsDeleted = false ALL ROWS'));
+    System.assertEquals(Event.SObjectType, records.getSObjectType());
   }
 
   @IsTest
@@ -31,10 +33,11 @@ private class RollupQueryBuilderTests {
     );
 
     Set<String> objIds = new Set<String>();
-    Database.query(queryString);
+    List<SObject> records = Database.query(queryString);
 
     System.assertEquals(true, queryString.contains('Id'));
     System.assertEquals(true, queryString.contains('AccountId'));
+    System.assertEquals(Opportunity.SObjectType, records.getSObjectType());
   }
 
   @IsTest
@@ -42,9 +45,10 @@ private class RollupQueryBuilderTests {
     String queryString = RollupQueryBuilder.Current.getQuery(Opportunity.SObjectType, new List<String>{ '', null, ' ', 'Id' }, 'AccountId', '=');
 
     Set<String> objIds = new Set<String>();
-    Database.query(queryString);
+    List<SObject> records = Database.query(queryString);
 
     System.assertEquals(true, queryString.contains('Id'));
+    System.assertEquals(Opportunity.SObjectType, records.getSObjectType());
   }
 
   @IsTest
@@ -64,5 +68,10 @@ private class RollupQueryBuilderTests {
     System.assertEquals(false, queryString.contains('()'), 'Should clean up removed nested conditionals: ' + queryString);
     System.assertEquals(false, queryString.contains('AND  AND '), queryString);
     System.assertEquals(false, queryString.contains('What.Type'), 'What.Type should have been stripped out: ' + queryString);
+    Set<String> recordIds = new Set<String>();
+    Set<String> objIds = recordIds;
+    // confirm query works
+    List<SObject> records = Database.query(queryString);
+    System.assertEquals(Event.SObjectType, records.getSObjectType());
   }
 }
