Worked with @jongpie to finish implementing true multi-currency rollup support. Still todo - checking first/last/average calculations, but everything appears to be working

--- a/extra-tests/classes/InvocableDrivenTests.cls
+++ b/extra-tests/classes/InvocableDrivenTests.cls
@@ -3,7 +3,7 @@ private class InvocableDrivenTests {
   @TestSetup
   static void setup() {
     upsert new RollupSettings__c(IsEnabled__c = true);
-    Account acc = new Account(Name = 'InvocableDrivenRollupTests');
+    Account acc = new Account(Name = InvocableDrivenTests.class.getName());
     insert acc;
   }
 
