--- a/extra-tests/classes/RollupRelationshipFieldFinderTests.cls
+++ b/extra-tests/classes/RollupRelationshipFieldFinderTests.cls
@@ -21,6 +21,7 @@ private class RollupRelationshipFieldFinderTests {
 
     RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(new List<ContactPointAddress>{ cpa });
 
+    parent = (Account) queryRecord(parent.Id);
     System.assertEquals(parent, traversal.retrieveParent(cpa.Id));
 
     // validates that the relationship field finder works even if a fully qualified path isn't provided if the parent
@@ -55,8 +56,9 @@ private class RollupRelationshipFieldFinderTests {
     RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(new List<ContactPointAddress>{ cpa });
 
     parent = [SELECT OwnerId FROM Account WHERE Id = :parent.Id];
+    User expectedUser = (User) queryRecord(parent.OwnerId);
     System.assertEquals(
-      [SELECT Id, Name FROM User WHERE Id = :parent.OwnerId][0],
+      expectedUser,
       traversal.retrieveParent(cpa.Id),
       'User should have been retrieved correctly!'
     );
@@ -214,6 +216,7 @@ private class RollupRelationshipFieldFinderTests {
     );
     RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(cpas);
 
+    parentOne = (Account) queryRecord(parentOne.Id);
     System.assertEquals(parentOne, traversal.retrieveParent(cpaOne.Id), 'First opp parent should not be exluded!');
     System.assertEquals(parentOne, traversal.retrieveParent(cpaTwo.Id), 'Second opp should not have been excluded!');
   }
@@ -250,7 +253,8 @@ private class RollupRelationshipFieldFinderTests {
     RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(cpas);
 
     // we don't anticipate it being necessary to return fields used in the where clause; just that records are filtered correctly
-    Account expectedFirst = new Account(Id = parentOne.Id, Name = parentOne.Name);
+    Account expectedFirst = (Account) queryRecord(parentOne.Id);
+    parentThree = (Account) queryRecord(parentThree.Id);
     System.assertEquals(expectedFirst, traversal.retrieveParent(cpaOne.Id), 'First cpa parent should be returned, matches nested conditional!');
     System.assertEquals(null, traversal.retrieveParent(cpaTwo.Id), 'Second cpa parent should have been excluded with clause after nested conditional!');
     // parent three doesn't have additional fields (like AccountNumber), fine to use as is
@@ -296,8 +300,19 @@ private class RollupRelationshipFieldFinderTests {
     );
     RollupRelationshipFieldFinder.Traversal traversal = finder.getParents(cpas);
 
-    Account expectedAcc = new Account(Id = parentOne.Id, Name = parentOne.Name);
+    Account expectedAcc = (Account) queryRecord(parentOne.Id);
     System.assertEquals(expectedAcc, traversal.retrieveParent(cpaOne.Id), 'Ultimate parent should have been used!');
     System.assertEquals(expectedAcc, traversal.retrieveParent(cpaTwo.Id), 'Ultimate parent should be found even if 5+ levels deep in hierarchy');
+  }
+
+  private static SObject queryRecord(Id recordId) {
+    SObjectType sObjectType = recordId.getSObjectType();
+    String currencyIscoCodeFieldName = 'CurrencyIsoCode';
+    List<String> fields = new List<String>{ 'Id', 'Name' };
+    if (UserInfo.isMultiCurrencyOrganization() && sObjectType.getDescribe().fields.getMap().containsKey(currencyIscoCodeFieldName)) {
+      fields.add(currencyIscoCodeFieldName);
+    }
+    String recordQuery = 'SELECT ' + String.join(fields, ', ') + '\nFROM ' + sObjectType + '\nWHERE Id = :recordId';
+    return Database.query(recordQuery);
   }
 }
