Adding in a few more safety precautions when it comes to multi-currency calculations - revised Readme with explicit extent of support (up to but not including support for DatedConverstionRate-based multi-currency orgs)

--- a/rollup/core/classes/RollupCalculator.cls
+++ b/rollup/core/classes/RollupCalculator.cls
@@ -359,7 +359,9 @@ public without sharing abstract class RollupCalculator {
       String.isBlank(this.parentIsoCode) ||
       String.isBlank(calcItemIsoCode) ||
       calcItemIsoCode == this.parentIsoCode ||
-      skinnyCalcItem?.getPopulatedFieldsAsMap().containsKey(this.opFieldOnCalcItem.getDescribe().getName()) == true
+      skinnyCalcItem?.getPopulatedFieldsAsMap().containsKey(this.opFieldOnCalcItem.getDescribe().getName()) == true ||
+      CURRENCY_ISO_CODE_TO_CURRENCY.containsKey(calcItemIsoCode) == false ||
+      CURRENCY_ISO_CODE_TO_CURRENCY.containsKey(this.parentIsoCode) == false
     ) {
       return;
     }
